--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Dancefloor</title>
     <!-- Bootstrap File -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery.js"></script>
