created divs to separate stage and gif selection

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
   </head>
   <body>
-    <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    <div class="container">
+      <div class="row">
+        <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+      </div>
+      <div class="row" id="gifSelect"></div>
+    </div>
   </body>
 </html>
