--- a/index.html
+++ b/index.html
@@ -15,21 +15,8 @@
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron" style="background-color: green; color: white;">
-      <div class="container">
-        <h1 class="text-center"><strong>GET ON THE DANCE FLOOR</strong></h1>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row" style="display:none;">
-     <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
-    </div>
-    <section style="display:inline-grid;">
-      <div class="row" id="gifSelect">
-        <button type="button" class="btn btn-danger btn-lg btn-block">Get out on the Dancefloor!</button>
-      </div>
-    </section>
+    <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    <div class="row" id="gifSelect"></div>
   </div>
 </body>
 </html>
