Stage wrapped in a container so dancers stay in respective positions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </head>
 <body>
   <div class="container">
-    <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    <div id="dancefloorContainer">
+      <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    </div>
     <div class="row" id="gifSelect"></div>
   </div>
 </body>
