added youtube radio station for synced music

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
     </div>
     <div class="row" id="gifSelect"></div>
+    <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
   </div>
 </body>
 </html>
