Created rows and buttons for browsing images

--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
 </head>
 <body>
   <div class="container">
-    <div id="dancefloorContainer">
-      <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    <div class="row">
+      <div id="dancefloorContainer">
+        <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+      </div>
     </div>
-    <div class="row" id="gifSelect"></div>
-    <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    <div class="row">
+      <button class="col-sm-6 btn btn-default">Previous</button>
+      <button class="col-sm-6 btn btn-default">Next</button>
+    </div>
+    <div class="row">
+      <div class="panel panel-default" id="gifSelect"></div>
+    </div>
+    <div class="row">
+      <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    </div>
   </div>
 </body>
 </html>
