Moved buttons into panel

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
       </div>
     </div>
-    <div class="row">
-      <button class="col-sm-6 btn btn-default">Previous</button>
-      <button class="col-sm-6 btn btn-default">Next</button>
-    </div>
-    <div class="row">
-      <div class="panel panel-default" id="gifSelect"></div>
+    <div class="row panel panel-default">
+      <div class="panel-heading">Select your avatar, click on the dance floor to move!</div>
+      <div class="panel-body" id="gifSelect">
+        <button class="col-sm-6 btn btn-default">Previous</button>
+        <button class="col-sm-6 btn btn-default">Next</button>
+      </div>
     </div>
     <div class="row">
       <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
