Added Previous and Next button functionality to browse gifs

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     </div>
     <div class="row panel panel-default">
       <div class="panel-heading">Select your avatar, click on the dance floor to move!</div>
-      <div class="panel-body" id="gifSelect">
-        <button class="col-sm-6 btn btn-default">Previous</button>
-        <button class="col-sm-6 btn btn-default">Next</button>
+      <div class="panel-body">
+        <button class="col-sm-6 btn btn-default" id="prevBtn">Previous</button>
+        <button class="col-sm-6 btn btn-default" id="nextBtn">Next</button>
+        <div id="gifSelect"></div>
       </div>
     </div>
     <div class="row">
