gif selection visual refinements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
       </div>
     </div>
-    <div class="row panel panel-default">
+    <div class="row panel panel-default" id="gifSelectPanel">
       <div class="panel-heading">Select your avatar, click on the dance floor to move!</div>
       <div class="panel-body">
         <button class="col-sm-6 btn btn-default" id="prevBtn">Previous</button>
