Ability to search for specific dancing gifs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="card-header">Select your avatar, click on the dance floor to move!</div>
       <div class="card-body">
         <div class="row">
-          <form class="form-inline">
+          <form class="form-inline" id="searchForm">
             <div class="col-auto">
               <input type="text" class="form-control mb-2 mb-sm-0" id="filterInput" placeholder="Filter gifs by name...">
             </div>
