--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Dancefloor</title>
-    <!-- Bootstrap File -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
-    <script src="./assets/script/main.js"></script>
-
-  </head>
-  <div class="container">
-      <div class="jumbotron" style="background-color: green; color: white;">
+<head>
+  <meta charset="utf-8">
+  <title>Dancefloor</title>
+  <!-- Bootstrap File -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <!-- JQuery -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
+  <script src="./assets/script/main.js"></script>
+</head>
+<body>
+  <div class="container">  
+     <div class="jumbotron" style="background-color: purple; color: white;">
         <div class="container"> 
-        <h1 class="text-center"><strong>GET ON THE DANCE FLOOR</strong></h1> 
+        <h1 class="text-center"><strong>GET DOWN ON THE DANCE FLOOR</strong></h1> 
         </div>
-      </div>
-  </div>
-  <body>
-    <div class="container">
-      <div class="row" style="display:none;">
-       <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
-      </div>
-        <section style="display:inline-grid;">
-        <div class="row" id="gifSelect">
-        <button type="button" class="btn btn-danger btn-lg btn-block">Get out on the Dancefloor!</button>
-        </div>
-        </section>
-    </div>
+     </div>
+  </div>  
 
-  </body>
+  <div id ="intro" class="container">
+    
+    <div class="row">
+      <div class="col-lg-6"> <p> Click on the velvet rope to enter the dance floor! </p>
+      </div>
+      <div class="col-lg-6"> 
+        <input type="image" id="start" src="./assets/img/velvetRope.jpg">
+      </div>
+   </div>
+  </div>
+
+  <div class="container">
+    <div id="dancefloorContainer" style="display:none;">
+      <img src="./assets/img/dancefloor.jpg" id="danceFloorImg">
+    </div>
+    <div class="row" id="gifSelect"></div>
+    <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+  </div>
+</body>
 </html>
