--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
   <div id ="intro" class="container">
     
     <div class="row">
-      <div class="col-lg-6"> <p> Click on the velvet rope to enter the dance floor! </p>
-      </div>
-      <div class="col-lg-6"> 
-        <input type="image" id="start" src="./assets/img/velvetRope.jpg">
-      </div>
-   </div>
+     <div class="col-lg-6"> 
+        <div class="jumbotron">
+          <h1>INSTRUCTIONS</h1> 
+          <p>Pick a GIF below, then click on the velvet rope to the right to enter the club! Once inside, click anywhere on the dance floor to move. If you ever feel like changing your avatar simply click on a different GIF</p> 
+        </div>
+     </div>
+     <div class="col-lg-6"> 
+        <input type="image" id="start" src="./assets/img/velvetRope.jpg" class="img-responsive" width="600">
+     </div>
+    </div>
   </div>
 
   <div class="container">
