--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     
     <div class="row">
      <div class="col-lg-6"> 
-        <div class="jumbotron">
+        <div class="jumbotron" style="background-color: blue; color: white;">
           <h1>INSTRUCTIONS</h1> 
           <p>Pick a GIF below, then click on the velvet rope to the right to enter the club! Once inside, click anywhere on the dance floor to move. If you ever feel like changing your avatar simply click on a different GIF</p> 
         </div>
      </div>
      <div class="col-lg-6"> 
-        <input type="image" id="start" src="./assets/img/velvetRope.jpg" class="img-responsive" width="600">
+        <input type="image" id="start" src="./assets/img/velvetRope.jpg" class="img-responsive" width="100%">
      </div>
     </div>
   </div>
