--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="jumbotron" id="header">
-     <h1 class="text-center"><strong>WELCOME TO THE DANCE FLOOR</strong></h1>
+     <h1 class="text-center bounce-animation"><strong>WELCOME TO THE DANCE FLOOR</strong></h1>
   </div>
   <div id ="intro" class="container">
     <div class="row">
