changed livestream, code indent corrections

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-
-
 <!DOCTYPE html>
+
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Dancefloor</title>
   <!-- Bootstrap File -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css">
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery.js"></script>
@@ -14,21 +15,25 @@
   <script src="https://www.gstatic.com/firebasejs/4.8.0/firebase.js"></script>
   <script src="./assets/script/main.js"></script>
 </head>
+
 <body>
   <div class="jumbotron" id="header">
-     <h1 class="text-center bounce-animation"><strong>WELCOME TO THE DANCE FLOOR</strong></h1>
+    <h1 class="text-center bounce-animation">
+      <strong>WELCOME TO THE DANCE FLOOR</strong>
+    </h1>
   </div>
-  <div id ="intro" class="container">
+  <div id="intro" class="container">
     <div class="row">
-     <div class="col-lg-6">
+      <div class="col-lg-6">
         <div class="jumbotron" id="instructions">
           <h1>INSTRUCTIONS</h1>
-          <p>Pick a GIF below, then click on the velvet rope to the right to enter the club! Once inside, click anywhere on the dance floor to move. If you ever feel like changing your avatar simply click on a different GIF</p>
+          <p>Pick a GIF below, then click on the velvet rope to the right to enter the club! Once inside, click anywhere on
+            the dance floor to move. If you ever feel like changing your avatar simply click on a different GIF</p>
         </div>
-     </div>
-     <div class="col-lg-6">
+      </div>
+      <div class="col-lg-6">
         <img id="start" class="rounded" src="./assets/img/velvetRope.jpg" width="100%">
-     </div>
+      </div>
     </div>
   </div>
 
@@ -67,8 +72,10 @@
       </div>
     </div>
     <div class="row">
-      <iframe displaywidth="560" height="200" src="https://www.youtube.com/embed/Pec5ci8gKMg?autoplay=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/GVC5adzPpiE?rel=0" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
     </div>
   </div>
 </body>
+
 </html>
